Minor fixes to image paths, heading/paragraph spacing and sizing

--- a/main.css
+++ b/main.css
@@ -55,11 +55,13 @@ picture {
 }
 
 .multiImage{
-    height: 100%;
+    /* height: 100%; */
+    display: flex;
+    flex-direction: column;
 }
 
 .multiImage picture {
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     object-fit: cover;
     object-position: center;
@@ -271,12 +273,12 @@ h3 {
 
 p,
 h1 {
-    margin: 0 0 2vh 0;
+    margin: 0.3em 0 1rem 0;
 }
 
 .ind h3 {
     /*margin: 0;*/
-    margin: 2vh 0 1vh 0;
+    /* margin: 2vh 0 1vh 0; */
 }
 
 .ind p {
@@ -288,7 +290,7 @@ p {
     font-weight: 300;
     font-style: normal;
     font-size: 2.3vh;
-    margin: 2vh 0;
+    /* margin: 2vh 0; */
 }
 
 h3 {
@@ -700,7 +702,7 @@ main .InfoPanel:not(#Intro .InfoPanel) {
     background: transparent;
     width: 100%;
     text-align: left;
-    font-size: 1.1em;
+    /* font-size: 1.1em; */
     /*padding: 0.75em;*/
     cursor: pointer;
     /*border: 1px solid #ddd;*/
@@ -1005,6 +1007,7 @@ nav #search-results article > .InfoPanel > * {
     flex-wrap: wrap;
     width: 100%;
     gap: 0.2em;
+    margin-bottom: 1rem;
 }
 
 main .tags div {
